Bug 157240 - PRINTING text lines disappear (in fact become white) when printing in grayscale
Summary: PRINTING text lines disappear (in fact become white) when printing in grayscale
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.5.5.2 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.8.0 target:24.2.7.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Options-Dialog-Colours regression-scaled-glyph-positions
  Show dependency treegraph
 
Reported: 2023-09-14 19:04 UTC by mmtsuchi
Modified: 2024-11-11 14:20 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
example to show grayscal bug that turn some text to white color (16.98 KB, application/vnd.oasis.opendocument.graphics)
2023-09-14 19:04 UTC, mmtsuchi
Details
picture to show grayscale printing that turn text white (40.01 KB, image/png)
2023-09-14 19:09 UTC, mmtsuchi
Details
A simple reproducer for Bug 157240 (5.04 KB, application/vnd.oasis.opendocument.graphics)
2024-04-25 20:24 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description mmtsuchi 2023-09-14 19:04:50 UTC
Created attachment 189576 [details]
example to show grayscal bug that turn some text to white color

Since Libreoffice version between 7.3 and 7.5.5, when you want to **print in grayscale, some text in text frames disappears.**
You can see on preview.
In fact, those texts become white.
Not all text are affected.

Colored and black & white show all text.

Libreoffice 7.3 doesn't show this problem.

Windows and linux versions 7.5.5, 7.5.6, 7.6 show this problem.

Regards
Comment 1 mmtsuchi 2023-09-14 19:09:45 UTC
Created attachment 189577 [details]
picture to show grayscale printing that turn text white
Comment 2 mmtsuchi 2023-09-15 12:37:09 UTC
It seems to be related to 1st line of paragraphs.

When you insert a space character at the begining of paragraph, the bug disappears, the text retrieves its "normal" color when printing in grayscale.
Comment 3 Buovjaga 2023-09-28 10:54:14 UTC
I bibisected the disappearing phenomenon with linux-64-7.5 repo to d5c8b38eab3d3766f403a33e11dffa498655be8f
tdf#152990 set the font after the MapMode is (potentially) set

Originally committed to 7.6 with b008831a5545e5a777d77547ef96b9798d795f30

In 24.2 the automatic text colour in the blue rectangle changed to white and it stays white in the print preview. This changed with ddb483509113e469b771320fea52f1b089574021
Resolves tdf#156182 - Automatic text color unreadable with darker cells
Comment 4 Heiko Tietze 2023-10-16 13:39:03 UTC
Resolved the contrast issues from bug 156182 with https://gerrit.libreoffice.org/c/core/+/158024 (new contrast applies to all colors but Light Blue 2 aka Tango Sky, which is the default for object background). But likely unrelated here.
Comment 5 mmtsuchi 2023-10-16 21:29:13 UTC
But, when I set text color to black (for example), I expected it to be black.
Comment 6 Mike Kaganski 2024-04-25 20:24:41 UTC
Created attachment 193855 [details]
A simple reproducer for Bug 157240

This FODG allows to reproduce easily (at least on Windows), by exporting it to WMF, and opening in a WMF reader like MS Paint. The text (black in the top box, yellow in the bottom box) arrives white.

But the WMF shows as expected, when opened in Draw.
Comment 7 Commit Notification 2024-04-26 03:51:09 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1112a2bea0cb260fd64360b679c3f0f5c495e16e

tdf#157240: also set font color together with font

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2024-10-23 18:26:00 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/69d8872fafbc6eab9f895f5c84355fa77e71ca3e

tdf#157240: also set font color together with font

It will be available in 24.2.8.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2024-10-26 08:41:10 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-2-7":

https://git.libreoffice.org/core/commit/02c0295bbfba4b41b3fdd5bae3218b8d10e443d0

tdf#157240: also set font color together with font

It will be available in 24.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 mmtsuchi 2024-11-11 13:03:50 UTC
Hi. It is fixed for me, tried with those attachments, with version
> Version: **24.2.7.2 (X86_64) / LibreOffice Community**
> Build ID: ee3885777aa7032db5a9b65deec9457448a91162
> CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win

Thanks a lot.