tdf#157240: also set font color together with font

Commit b008831a5545e5a777d77547ef96b9798d795f30 (tdf#152990 set the font
after the MapMode is (potentially) set, 2023-01-14) had moved setting of
font forward, but left setting the font color behind. This fixed that.

Change-Id: I73fadc7c139da3b6f84b7fc875c585d02fc1c719
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/166654
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>